atmega-hal: Add support for ATmega1284P

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,10 @@ jobs:
             spec: atmega48p
             crate: atmega-hal
           - type: mcu
+            name: atmega1284p
+            spec: atmega1284p
+            crate: atmega-hal
+          - type: mcu
             name: attiny85
             spec: attiny85
             crate: attiny-hal
