ravedude: Add micronucleus support

--- a/ravedude/src/avrdude/avrdude.conf
+++ b/ravedude/src/avrdude/avrdude.conf
@@ -875,6 +875,16 @@ programmer
 ;
 
 programmer
+  id                     = "micronucleus";
+  desc                   = "Micronucleus for bootloader";
+  type                   = "micronucleus";
+  #prog_modes             = PM_SPM;
+  connection_type        = usb;
+  usbvid                 = 0x16d0;
+  usbpid                 = 0x0753;
+;
+
+programmer
   id    = "butterfly";
   desc  = "Atmel Butterfly Development Board";
   type  = "butterfly";
