arduino-hal: Add support for Digispark model A

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,9 @@ jobs:
           - type: board
             name: nano168
             examples: true
+          - type: board
+            name: digispark
+            examples: true
           - type: mcu
             name: atmega1280
             spec: atmega1280
