--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -19,6 +19,7 @@ critical-section-impl = ["avr-device/critical-section-impl"]
 board-selected = []
 mcu-atmega = []
 mcu-attiny = []
+internal-clock = []
 arduino-diecimila = ["mcu-atmega", "atmega-hal/atmega168", "board-selected"]
 arduino-leonardo = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
 arduino-mega2560 = ["mcu-atmega", "atmega-hal/atmega2560", "board-selected"]
