--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
             name: sparkfun-promicro
             examples: true
           - type: board
+            name: sparkfun-promini-3v
+            examples: true
+          - type: board
             name: sparkfun-promini-5v
             examples: true
           - type: board
