add `embedded-hal=1.0.0` dependency
this does not yet implement any 1.0.0 APIs, this is just a first step to
make them available for implementation.

the existing v0.2 dependency is being kept but is internally renamed to
`embedded-hal-v0`. the re-export as `avr_hal_generic::hal` still points
to v0.

v1 APIs can now be implemented step-by-step. once all APIs are
implemented the v0 APIs can be removed as a breaking change.

--- a/examples/arduino-uno/Cargo.toml
+++ b/examples/arduino-uno/Cargo.toml
@@ -9,10 +9,14 @@ publish = false
 panic-halt = "0.2.0"
 ufmt = "0.2.0"
 nb = "1.1.0"
-embedded-hal = "0.2.3"
+embedded-hal = "1.0.0-rc.3"
 pwm-pca9685 = "0.3.1"
 infrared = "0.14.1"
 embedded-storage = "0.2"
+
+[dependencies.embedded-hal-v0]
+version = "0.2.3"
+package = "embedded-hal"
 
 [dependencies.arduino-hal]
 path = "../../arduino-hal/"
