--- a/examples/nano168/Cargo.toml
+++ b/examples/nano168/Cargo.toml
@@ -10,7 +10,11 @@ publish = false
 panic-halt = "0.2.0"
 ufmt = "0.2.0"
 nb = "1.1.0"
-embedded-hal = "0.2.3"
+embedded-hal = "1.0.0-rc.3"
+
+[dependencies.embedded-hal-v0]
+version = "0.2.3"
+package = "embedded-hal"
 
 [dependencies.arduino-hal]
 path = "../../arduino-hal/"
