--- a/arduino-hal/Cargo.toml
+++ b/arduino-hal/Cargo.toml
@@ -27,8 +27,12 @@ nano168 = ["mcu-atmega", "atmega-hal/atmega168", "atmega-hal/enable-extra-adc", 
 
 [dependencies]
 cfg-if = "1"
-embedded-hal = "0.2.3"
+embedded-hal = "1.0.0-rc.3"
 ufmt = "0.2.0"
+
+[dependencies.embedded-hal-v0]
+version = "0.2.3"
+package = "embedded-hal"
 
 [dependencies.void]
 version = "1.0.2"
