--- a/examples/trinket-pro/Cargo.toml
+++ b/examples/trinket-pro/Cargo.toml
@@ -7,7 +7,11 @@ publish = false
 
 [dependencies]
 panic-halt = "0.2.0"
-embedded-hal = "0.2.3"
+embedded-hal = "1.0.0-rc.3"
+
+[dependencies.embedded-hal-v0]
+version = "0.2.3"
+package = "embedded-hal"
 
 [dependencies.arduino-hal]
 path = "../../arduino-hal/"
