--- a/examples/arduino-uno/Cargo.toml
+++ b/examples/arduino-uno/Cargo.toml
@@ -13,6 +13,7 @@ embedded-hal = "1.0"
 pwm-pca9685 = "0.3.1"
 infrared = "0.14.1"
 embedded-storage = "0.2"
+embedded-hal-bus = "0.1.0"
 
 [dependencies.embedded-hal-v0]
 version = "0.2.3"
