--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,11 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          profile: minimal
-          toolchain: nightly-2022-06-13
-          override: true
+          toolchain: nightly-2023-12-28
           components: rust-src
       - name: Build documentation (arduino-hal)
         run: cd arduino-hal/ && cargo doc --features arduino-uno
